[tool.poetry]
name = "IreneAPI"
version = "2.0"
description = "The Websocket and REST API for Irene."
authors = ["MujyKun <mujy@irenebot.com>"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
]
readme = "README.md"
homepage = "https://api.irenebot.com/"
repository = "https://github.com/MujyKun/IreneAPI"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
quart = "0.18.0"
asyncpg = "0.26.0"
python-dotenv = "0.20.0"
passlib = "1.7.4"
google-api-python-client = "2.56.0"
google-auth = "2.10.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "0.5.2"
psycopg2 = "2.9.3"
black = "^22.6.0"
pre-commit = "2.20.0"
quart-openapi = {version = "1.7.2", extras = ["doc"]}
aiogoogle = "4.3.0"
peony-twitter = {extras = ["all"], version = "^2.1.2"}
xmltodict = "^0.13.0"
aiofiles = "^0.8.0"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"