[tool.poetry]
name = "IreneAPI"
version = "2.0"
description = "The Websocket and REST API for Irene."
authors = ["MujyKun <mujy@irenebot.com>"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
]
readme = "README.md"
homepage = "https://api.irenebot.com/"
repository = "https://github.com/MujyKun/IreneAPI"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
quart = "0.19.6"
asyncpg = "0.29.0"
python-dotenv = "1.0.1"
passlib = "1.7.4"
google-api-python-client = "2.132.0"
google-auth = "2.30.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.0"
psycopg2-binary = "2.9.9"
black = "24.4.2"
pre-commit = "3.7.1"
quart-openapi = {git = "https://github.com/MujyKun/quart-openapi.git", extras = ["doc"]}
aiogoogle = "5.7.0"
xmltodict = "^0.13.0"
aiofiles = "23.2.1"
Pillow = "^9.2.0"
Werkzeug = "3.0.3"
click = "8.1.7"
jsonschema = "^4.9.1"
hypercorn = "0.17.3"
Quart-CORS = "^0.5.0"
aiohttp = "^3.8.3"
datadog = "0.49.1"
tiktokapipy = "0.2.4.post2"
playwright = "^1.31.1"
curl-cffi = "0.6.4"
livestreamer = "^1.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"